--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>API Reference</title>
+    <title>PICP API Reference</title>
 
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
     <style>
       .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
@@ -88,10 +86,12 @@
   color: #90a959;
 }
     </style>
+    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;]">
+  <body class="index" data-languages="[&quot;c++&quot;,&quot;c&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -101,9 +101,8 @@
     <div class="tocify-wrapper">
       <img src="images/logo.png" />
         <div class="lang-selector">
-              <a href="#" data-language-name="shell">shell</a>
-              <a href="#" data-language-name="ruby">ruby</a>
-              <a href="#" data-language-name="python">python</a>
+              <a href="#" data-language-name="c++">C++11</a>
+              <a href="#" data-language-name="c">C11</a>
         </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
@@ -112,29 +111,40 @@
       <div id="toc">
       </div>
         <ul class="toc-footer">
-            <li><a href='#'>Sign Up for a Developer Key</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id="introduction">Introduction</h1>
+        <h2 id="introduction">Introduction</h2>
 
-<p>Welcome to the Kittn API! You can use our API to access Kittn API endpoints, which can get information on various cats, kittens, and breeds in our database.</p>
+<p>pICP is an AFIT project designed to create a parallel implementation of an Iterative Closest Point (ICP) algorithm using the CUDA architecture, hence the name &ldquo;pICP&rdquo; (parallel Iterative Closest Points). The primary purpose of the project is to produce fast positioning estimates using the well-known ICP algorithm.<br>
+<strong>Based on the paper:</strong>
+  Besl, Paul J., and Neil D. McKay. &ldquo;Method for registration of 3-D shapes.&rdquo; Robotics-DL tentative. International Society for Optics and Photonics, 1992.`</p>
 
-<p>We have language bindings in Shell, Ruby, and Python! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
+<h2 id="background">Background</h2>
 
-<p>This example API documentation page was created with <a href="https://github.com/tripit/slate">Slate</a>. Feel free to edit it and use it as a base for your own API&rsquo;s documentation.</p>
+<p>The initial alignment phase of ICP is often dominated by the nearest-neighbor computation, also sometimes called the  and because recursive spatial-indexing structures such as a full <a href="https://en.wikipedia.org/wiki/K-d_tree"><em>k</em>-D Tree</a> searches generally exhibit low amounts of parallelism, an new approach to the <a href="https://en.wikipedia.org/wiki/Nearest_neighbor_search">Nearest Neighbor</a> problem is used in this implementation that is conceptually based off the <a href="https://en.wikipedia.org/wiki/Jump-and-Walk_algorithm">Jump-and-Walk algorithm</a>. Additionally, a parallel point-to-surface projection algorithm that forgoes the need for an expensive square root operation, is also included.  </p>
 
-<h1 id="authentication">Authentication</h1>
+<h2 id="how-fast-is-it">How fast is it?</h2>
+
+<p><strong>Latest Benchmarks:</strong></p>
+
+<h2 id="requirements">Requirements</h2>
+
+<p>pICP requires CUDA to run (5.5+). The current API available also requires several C++11 features, however C11 is in the works. </p>
+
+<h2 id="getting-started">Getting Started</h2>
+
+<p>pICP leverages both the low-dimensionality of the problem (3) and the abundance of information known at compile-time to achieve its speed estimates. As a result, a lot of preprocessing to get started.</p>
+
+<p>Note that this implementation is <em>model-specialized</em> and <em>runtime agnostic</em>. This means that, initially, specific model information is required initially at runtime to be loaded onto the GPU. After this is done, any source clouds can be introduced and the algorithm proceeds with the positional estimates (fast), but any reloading of different model data (a different reference model) will require potentially thousands of memory transactions. </p>
 
 <blockquote>
-<p>To authorize, use this code:</p>
+<p>pICP requires </p>
 </blockquote>
-<pre class="highlight ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
-
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
+<pre class="highlight cpp"><code>
 </code></pre>
 <pre class="highlight python"><code><span class="kn">import</span> <span class="nn">kittn</span>
 
@@ -143,6 +153,10 @@
 <pre class="highlight shell"><code><span class="c"># With shell, you can just pass the correct header with each request</span>
 curl <span class="s2">"api_endpoint_here"</span>
   -H <span class="s2">"Authorization: meowmeowmeow"</span>
+</code></pre>
+<pre class="highlight javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
+
+<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
 </code></pre>
 
 <blockquote>
@@ -174,6 +188,11 @@ You must replace <code>meowmeowmeow</code> with your personal API key.
 </code></pre>
 <pre class="highlight shell"><code>curl <span class="s2">"http://example.com/api/kittens"</span>
   -H <span class="s2">"Authorization: meowmeowmeow"</span>
+</code></pre>
+<pre class="highlight javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
+
+<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
+<span class="kd">let</span> <span class="nx">kittens</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">();</span>
 </code></pre>
 
 <blockquote>
@@ -241,6 +260,11 @@ Remember — a happy kitten is an authenticated kitten!
 </code></pre>
 <pre class="highlight shell"><code>curl <span class="s2">"http://example.com/api/kittens/2"</span>
   -H <span class="s2">"Authorization: meowmeowmeow"</span>
+</code></pre>
+<pre class="highlight javascript"><code><span class="kr">const</span> <span class="nx">kittn</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'kittn'</span><span class="p">);</span>
+
+<span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
+<span class="kd">let</span> <span class="nx">max</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">(</span><span class="mi">2</span><span class="p">);</span>
 </code></pre>
 
 <blockquote>
@@ -338,9 +362,8 @@ Remember — a happy kitten is an authenticated kitten!
       </div>
       <div class="dark-box">
           <div class="lang-selector">
-                <a href="#" data-language-name="shell">shell</a>
-                <a href="#" data-language-name="ruby">ruby</a>
-                <a href="#" data-language-name="python">python</a>
+                <a href="#" data-language-name="c++">C++11</a>
+                <a href="#" data-language-name="c">C11</a>
           </div>
       </div>
     </div>
